Updated title and paragraph tag

--- a/public/index.html
+++ b/public/index.html
@@ -8,12 +8,9 @@
 		<title>Movie-API</title>
 	</head>
 	<body>
-		<h1>Index</h1>
+		<h1>FilmFever</h1>
 		<p>
-			Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente,
-			ducimus libero ipsa eius a provident tempora corporis nihil numquam soluta
-			accusantium officiis doloremque magni vitae ab, fugit vero vel?
-			Repellendus.
+			Welcome to FilmFever!
 		</p>
 	</body>
 </html>
